--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
-    "prettier": "^2.8.7"
+    "prettier": "^2.8.7",
+    "tailwindcss": "^3.3.1"
   }
 }
