--- a/.github/workflows/lint-check.yml
+++ b/.github/workflows/lint-check.yml
@@ -3,11 +3,7 @@
 
 name: React.js CI
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: push
 
 jobs:
   build:
