--- a/.github/workflows/team.yml
+++ b/.github/workflows/team.yml
@@ -1,14 +1,5 @@
 name: Greeting
-on:
-  fork:
-  issues:
-    types: [opened]
-  issue_comment:
-    types: [created]
-  pull_request_target:
-    types: [opened]
-  pull_request_review_comment:
-    types: [created]
+on: push
 
 jobs:
   welcome:
