--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,8 @@
   "plugins": ["react", "prettier"],
   "rules": {
     "react/jsx-filename-extension": "off",
-    "comma-dangle": "off"
+    "comma-dangle": "off",
+    "linebreak-style":["off", "windows"],
+    "jsx-a11y/anchor-is-valid": "off"
   }
 }
