--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,8 @@
     "react/jsx-filename-extension": "off",
     "comma-dangle": "off",
     "linebreak-style":["off", "windows"],
-    "jsx-a11y/anchor-is-valid": "off"
+    "jsx-a11y/anchor-is-valid": "off",
+    "react/function-component-definition": "off",
+    "import/prefer-default-export": "off"
   }
 }
