--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,13 @@
     "react/function-component-definition": "off",
     "import/prefer-default-export": "off",
     "react/prop-types": "off",
-    "arrow-body-style": ["error", "always"]
+    "arrow-body-style": ["error", "always"],
+    "react/self-closing-comp": [
+      "error",
+      {
+        "component": true,
+        "html": false
+      }
+    ]
   }
 }
