--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "no-nested-ternary":"off",
     "no-alert":"off",
     "react/style-prop-object":"off",
-    "object-curly-newline":"off"
+    "object-curly-newline":"off",
+    "class-methods-use-this": "off"
   }
 }
